# DualPendulumGym

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/dual_pendulum_gym/: __init__.py  __main__.py  eval.py  play.py
src/dual_pendulum_gym/envs/: __init__.py  dual_pendulum.py
src/dual_pendulum_gym/physics/: dynamics.py
src/dual_pendulum_gym/rendering/: renderer.py
src/dual_pendulum_gym/training/: __main__.py  actor_critic.py  sft.py  train.py
