[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DualPendulumGym"
version = "0.1.0"
description = "A Gymnasium environment for the cart-double-pendulum swing-up problem"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pygame>=2.1.0",
    "PyOpenGL>=3.1.0",
]

[project.optional-dependencies]
train = ["torch>=2.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."gymnasium.envs"]
DualPendulumGym = "dual_pendulum_gym"
